# zycore-c

./: CMakeLists.txt  CMakeLists.txt.in  Doxyfile.in  README.md  WASMToolchain.cmake  meson.build  meson_options.txt
.github/workflows/: main.yml
cmake/: zyan-functions.cmake  zycore-config.cmake.in
examples/: Vector.c  meson.build
include/Zycore/: Allocator.h  ArgParse.h  Bitset.h  Comparison.h  Defines.h  Format.h  LibC.h  List.h  Object.h  Status.h  String.h  Terminal.h  Thread.h  Types.h  Vector.h  Zycore.h
include/Zycore/API/: Memory.h  Synchronization.h  Terminal.h  Thread.h
include/Zycore/Internal/: ThreadPOSIX.h  ThreadWindows.h
resources/: VersionInfo.rc
src/: Allocator.c  ArgParse.c  Bitset.c  Format.c  List.c  Memory.c  String.c  Terminal.c  Thread.c  ThreadPOSIX.c  ThreadWindows.c  Vector.c  Zycore.c
src/API/: Synchronization.c  Terminal.c  Thread.c
tests/: ArgParse.cpp  Vector.cpp  meson.build
